<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/stateText"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_receive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Switch
        android:id="@+id/sw_hex_ascii"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sw_hex_ascii_text"
        app:layout_constraintEnd_toStartOf="@+id/tv_receive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_receive" />

    <Button
        android:id="@+id/btn_clear_receive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear_text"
        app:layout_constraintEnd_toStartOf="@id/tv_receive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_hex_ascii" />


    <TextView
        android:id="@+id/tv_receive"
        android:layout_width="0dp"
        android:layout_height="370dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_border"
        android:ems="10"
        android:maxLines="50"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:gravity="start"
        android:hint="@string/receiveAreaHint"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/ev_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sw_hex_ascii"
        app:layout_constraintTop_toTopOf="parent" />


    <Switch
        android:id="@+id/sw_hex_ascii_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sw_hex_ascii_text"
        app:layout_constraintEnd_toStartOf="@+id/ev_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ev_send" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_send_text"
        app:layout_constraintEnd_toStartOf="@id/ev_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_hex_ascii_send" />

    <EditText
        android:id="@+id/ev_send"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_border"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/inputAreaHint"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_receive"
        app:layout_constraintTop_toBottomOf="@+id/tv_receive" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/bluetooth"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/ev_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/ev_send"
        app:layout_constraintTop_toTopOf="@+id/ev_send"
        app:layout_constraintVertical_bias="0.9"
        app:pressedTranslationZ="12dp"
        app:rippleColor="#FA8072" />


</androidx.constraintlayout.widget.ConstraintLayout>